deps/LAGraph/include/LAGraph.h

#define LAGRAPH_MAX_NAME_LEN GxB_MAX_NAME_LEN
#define LAGRAPH_MAX_NAME_LEN 128
#define LAGRAPH_INVALID_GRAPH                   (-1000)
#define LAGRAPH_IO_ERROR                        (-1002)
struct LAGraph_Graph_struct
{
    GrB_Matrix  A ;         
    LAGraph_Kind kind ;     
    GrB_Matrix AT ; 
    GrB_Vector out_degree ; 
    GrB_Vector in_degree ;  
    LAGraph_Boolean is_symmetric_structure ;    
    int64_t nself_edges ; 
    GrB_Scalar emin ;   
    LAGraph_State emin_state ;
    GrB_Scalar emax ;   
    LAGraph_State emax_state ;
} ;
typedef struct LAGraph_Graph_struct *LAGraph_Graph ;
LAGRAPH_PUBLIC
int LAGraph_CheckGraph
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_GetNumThreads
(
    int *nthreads_outer,    
    int *nthreads_inner,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_SetNumThreads
(
    int nthreads_outer,
    int nthreads_inner,
    char *msg
) ;
LAGRAPH_PUBLIC
double LAGraph_WallClockTime     
(
    void
) ;
LAGRAPH_PUBLIC
int LAGraph_MMRead
(
    GrB_Matrix *A,  
    FILE *f,        
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_MMWrite
(
    GrB_Matrix A,       
    FILE *f,            
    FILE *fcomments,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Matrix_Structure
(
    GrB_Matrix *C,      
    GrB_Matrix A,
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Vector_Structure
(
    GrB_Vector *w,  
    GrB_Vector u,
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_NameOfType
(
    char *name,     
    GrB_Type type,  
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_TypeFromName
(
    GrB_Type *type, 
    char *name,     
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_SizeOfType
(
    size_t *size,   
    GrB_Type type,  
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Matrix_TypeName
(
    char *name,     
    GrB_Matrix A,   
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Vector_TypeName
(
    char *name,     
    GrB_Vector v,   
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Scalar_TypeName
(
    char *name,     
    GrB_Scalar s,   
    char *msg
) ;
typedef enum
{
    LAGraph_SILENT = 0,     
    LAGraph_SUMMARY = 1,    
    LAGraph_SHORT = 2,      
    LAGraph_COMPLETE = 3,   
    LAGraph_SHORT_VERBOSE = 4,    
    LAGraph_COMPLETE_VERBOSE = 5  
}
LAGraph_PrintLevel ;
LAGRAPH_PUBLIC
int LAGraph_Graph_Print
(
    const LAGraph_Graph G,  
    LAGraph_PrintLevel pr,  
    FILE *f,                
    char *msg
) ;