graph/src/graph/graphblas/lagraph_bindings.rs

unsafe extern "C" {
    #[doc = " LAGraph_CheckGraph: determines if a graph is valid.  Only basic checks are\n performed on the cached properties, taking O(1) time.\n\n @param[in] G         graph to check.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G is NULL.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid: G->A missing, G->kind\n      not a recognized kind, G->AT present but has the wrong dimensions or\n      its type does not match G->A, G->in_degree/out_degree present but\n      with the wrong dimension or type (in/out_degree must be GrB_INT64).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_CheckGraph(
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_GetNumThreads determines the current number of OpenMP threads that\n can be used.  See LAGraph_SetNumThreads for a description of nthreads_outer\n and nthreads_inner.\n\n @param[out] nthreads_outer   number of threads for outer region.\n @param[out] nthreads_inner   number of threads for inner region,\n                              or for the underlying GraphBLAS library.\n @param[in,out] msg           any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if nthreads_outer or nthreads_inner are NULL."]
    pub fn LAGraph_GetNumThreads(
        nthreads_outer: *mut ::std::os::raw::c_int,
        nthreads_inner: *mut ::std::os::raw::c_int,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_SetNumThreads sets the current number of OpenMP threads that can be\n used by LAGraph and GraphBLAS.  Two thread counts can be controlled:\n\n @param[in] nthreads_outer\n    number of threads to be used in outer regions of a\n    nested parallel construct assuming that nthreads_inner is used in the\n    inner region.  The total number of threads used for an entire nested\n    region in LAGraph is given by nthreads_outer*nthreads_inner.  This\n    product is also the # of threads that a flat parallel region in LAGraph\n    may use.\n @param[in] nthreads_inner\n    number of threads to be used in an inner region of a\n    nested parallel construct, or for the # of threads to be used in each\n    call to the underlying GraphBLAS library.\n @param[in,out] msg           any error messages.\n\n @retval GrB_SUCCESS if successful.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_SetNumThreads(
        nthreads_outer: ::std::os::raw::c_int,
        nthreads_inner: ::std::os::raw::c_int,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_WallClockTime returns the current wall clock time.  Normally, this\n is simply a wrapper for omp_get_wtime, if OpenMP is in use.  Otherwise, an\n OS-specific timing function is called.  Note that unlike all other LAGraph\n functions, this function does not return an error condition, nor does it\n have a msg string parameter.  Instead, it returns the current wall clock\n time (in seconds) since some fixed point in the past.\n\n @returns the current wall clock time."]
    pub fn LAGraph_WallClockTime() -> f64;
}
unsafe extern "C" {
    /// LAGraph_MMRead: reads a matrix in MatrixMarket format.
    pub fn LAGraph_MMRead(
        A: *mut GrB_Matrix,
        f: *mut FILE,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    /// LAGraph_MMWrite: writes a matrix in MatrixMarket format.
    pub fn LAGraph_MMWrite(
        A: GrB_Matrix,
        f: *mut FILE,
        fcomments: *mut FILE,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Matrix_Structure: returns the sparsity structure of a matrix A as a\n boolean (GrB_BOOL) matrix C.  If A(i,j) appears in the sparsity structure of\n A, then C(i,j) is set to true.  The sparsity structure of A and C are\n identical.\n\n @param[out] C    A boolean matrix with same structure of A, with C(i,j)\n                  true if A(i,j) appears in the sparsity structure of A.\n @param[in]  A    matrix to compute the structure for.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if A or C are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Matrix_Structure(
        C: *mut GrB_Matrix,
        A: GrB_Matrix,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Vector_Structure: returns the sparsity structure of a vector u as a\n boolean (GrB_BOOL) vector w.  If u(i) appears in the sparsity structure of\n u, then w(i) is set to true.  The sparsity structure of u and w are\n identical.\n\n @param[out] w    A boolean vector with same structure of u, with w(i)\n                  true if u(i,j) appears in the sparsity structure of u.\n @param[in]  u    vector to compute the structure for.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if w or u are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Vector_Structure(
        w: *mut GrB_Vector,
        u: GrB_Vector,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_NameOfType returns the name of a GraphBLAS type as a string.  The\n names for the 11 built-in types (GrB_BOOL, GrB_INT8, etc) correspond to the\n names of the corresponding C types (bool, int8_t, etc).\n\n @param[out] name     name of the type: user provided array of size at\n                      least LAGRAPH_MAX_NAME_LEN.\n @param[in]  type     GraphBLAS type to find the name of.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if name or type are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_NameOfType(
        name: *mut ::std::os::raw::c_char,
        type_: GrB_Type,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_TypeFromName: returns the GrB_Type corresponding to its name.  That\n is, given the string \"bool\", this method returns GrB_BOOL.\n\n @param[out] type     GraphBLAS type corresponding to the given name string.\n @param[in]  name     name of the type: a null-terminated string.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if name or type are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_TypeFromName(
        type_: *mut GrB_Type,
        name: *mut ::std::os::raw::c_char,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_SizeOfType: returns sizeof(...) of a GraphBLAS GrB_Type.  For\n example, if given the GrB_Type of GrB_FP64, the value sizeof(double) is\n returned.\n\n @param[out] size     size of the type\n @param[in]  type     GraphBLAS type to find the size of.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if size or type are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_SizeOfType(
        size: *mut usize,
        type_: GrB_Type,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Matrix_TypeName: returns the name of the GrB_Type of a GrB_Matrix.\n\n @param[out] name     name of the type of the matrix: user provided array of\n                      size at least LAGRAPH_MAX_NAME_LEN.\n @param[in]  A        GraphBLAS matrix to find the type name of.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if name or A are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Matrix_TypeName(
        name: *mut ::std::os::raw::c_char,
        A: GrB_Matrix,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Vector_TypeName: returns the name of the GrB_Type of a GrB_Vector.\n\n @param[out] name     name of the type of the vector: user provided array of\n                      size at least LAGRAPH_MAX_NAME_LEN.\n @param[in]  v        GraphBLAS vector to find the type name of.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if name or v are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Vector_TypeName(
        name: *mut ::std::os::raw::c_char,
        v: GrB_Vector,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Scalar_TypeName: returns the name of the GrB_Type of a GrB_Scalar.\n\n @param[out] name     name of the type of the scalar: user provided array of\n                      size at least LAGRAPH_MAX_NAME_LEN.\n @param[in]  s        GraphBLAS scalar to find the type name of.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if name or s are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Scalar_TypeName(
        name: *mut ::std::os::raw::c_char,
        s: GrB_Scalar,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
#[repr(u32)]
#[doc = " LAGraph_PrintLevel:  an enum to control how much to print in\n LAGraph_*_Print methods."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum LAGraph_PrintLevel {
    #[doc = "< nothing is printed."]
    LAGraph_SILENT = 0,
    #[doc = "< print a terse summary."]
    LAGraph_SUMMARY = 1,
    #[doc = "< short description, about 30 entries."]
    LAGraph_SHORT = 2,
    #[doc = "< print the entire contents of the object."]
    LAGraph_COMPLETE = 3,
    #[doc = "< short, but with \"%.15g\" for doubles."]
    LAGraph_SHORT_VERBOSE = 4,
    #[doc = "< complete, but \"%.15g\" for doubles."]
    LAGraph_COMPLETE_VERBOSE = 5,
}
unsafe extern "C" {
    #[doc = " LAGraph_Graph_Print: prints the contents of a graph to a file in a human-\n readable form.  This method is not meant for saving a graph to a file; see\n @sphinxref{LAGraph_MMWrite} for that method.\n\n @param[in] G         graph to display.\n @param[in] pr        print level.\n @param[in,out] f     handle to an open file to write to.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G or f are NULL.\n @retval LAGRAPH_INVALID_GRAPH if G is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @retval GrB_NOT_IMPLEMENTED if G->A has a user-defined type.\n @retval LAGRAPH_IO_ERROR if the file could not be written to.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Graph_Print(
        G: LAGraph_Graph,
        pr: LAGraph_PrintLevel,
        f: *mut FILE,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
